2009-09-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* xaml.cpp: Honor the debug configuration option instead of enabling it
	all the time.

	* glyphs.cpp: Move debug code into conditional expression.

	* debug.h: DEBUG is resolved to nothing at all in release builds, so
	when checking if debug is defined in complex expressions we need to
	use 'defined (DEBUG)', since otherwise the expression becomes bogus.
	Also Move #include "runtime.h" outside of the conditional code, this
	way we don't have different include requirements in other headers
	depending on debug/release configuration.

	r: sde

2009-09-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp|h: SetCurrentDeployment: add a parameter
	specifying whether the current thread should be registered with the
	deployment or not.
	
	This fixes a minor catch with the media threads: they need to register
	the current thread with the deployment before calling
	SetCurrentDeployment, but they can't call GetDeployment to get the
	deployment to register the thread with before calling
	SetCurrentDeployment since it would trigger a deployment mis-matched
	warning.

	* pipeline.cpp|h: Add a thread pool to manage media threads instead of
	creating one thread per Media instance.

	* pipeline-asf.cpp: Updated according to Media API changes.

	r: geoff

2009-09-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaplayer.cpp: GetVolume: Get the AudioSource instance before using
	it.

	r: sde

2009-09-16  Larry Ewing  <lewing@novell.com>

	* multiscaleimage.cpp (OnPropertyChanged): chain up to MediaBase
	not DependencyObject so that property changes actually work.

	r: kangaroo

2009-09-14  Jeffrey Stedfast  <fejj@novell.com>

	* deployment.cpp (Initialize): Disable MONO_IOMAP=case.

	* application.cpp (GetResourceAsPath): ExtractAll using
	CanonModeResource (everything gets lowercased).

	* xap.cpp (Unpack): ExtractAll using CanonModeXap (everything but
	.dll's get lowercased).